<resources>
    <string name="app_name">Barker and Burdock</string>

    <string name="tv_res">Touch button to play</string>
    <string name="btn_ace_diamonds">Ace Diamonds</string>
    <string name="btn_ace_clubs">Ace Clubs</string>
    <string name="btn_two_diamonds">Two Diamonds</string>
    <string name="btn_two_clubs">Two Clubs</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_playing">Start</string>

    <string name="txt_lose">You lose: %1$d, N = %2$d, M = %3$s</string>
    <string name="txt_win">You won: %1$d, N = %2$d, M = %3$s</string>
    <string name="txt_dead_heat">Dead heat: %1$d, N = %2$d, M = %3$s</string>
    <string name="txt_added_rows">Added %1$d rows, N = %2$d, M = %3$s</string>
    <string name="txt_progress" translatable="false">%1$d / %2$d</string>

    <string name="tv_txt_mode_barker">Barker mode</string>
    <string name="tv_txt_mode_burdock">Burdock mode</string>
    <string name="tv_txt_matches_count">Count of matches</string>
    <string name="ed_matches_count" translatable="false">100</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_refresh">Refresh</string>

    <string name="sp_mode_random">Random AI</string>
    <string name="sp_mode_optimal">Optimal AI</string>
    <string name="sp_mode_human">Human</string>
    <string name="toast_burdock_changed">Only one human! Burdock changed</string>
    <string name="toast_barker_changed">Only one human! Barker changed</string>

    <string name="gv_title_random"> Rnd </string>
    <string name="gv_title_optimal"> Opt </string>
    <string name="gv_title_human"> Hum </string>
    <string name="gv_title_empty" translatable="false">     </string>
</resources>
