<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="empty.barkerandburdock.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/tv_res"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="246dp" />

        <Button
            android:id="@+id/btnAceDiamonds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/btn_ace_diamonds"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="399dp" />

        <Button
            android:id="@+id/btnAceClubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_ace_clubs"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="351dp" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_two_diamonds"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="127dp" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/btn_settings" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvRes"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_playing"
            android:visibility="invisible" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
